[gd_scene load_steps=4 format=3 uid="uid://csogfsalhf036"]

[ext_resource type="Texture2D" uid="uid://1dlamtkj2e3n" path="res://images/sniper.png" id="1_b73cq"]
[ext_resource type="Script" path="res://towers/tower place/sniperPlace.gd" id="2_bixsi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2pc4a"]
radius = 56.264

[node name="Sniper" type="Sprite2D"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_b73cq")
script = ExtResource("2_bixsi")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.88911, 25.1884)
shape = SubResource("CircleShape2D_2pc4a")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
